# HelloPicoWithCirclePid

./: EncodeDriver.py  LICENSE  PicoMain.py  PicoMainWithUART.py  readme.md
Doc/: encoder编码.md  概览篇-视频脚本.xlsx  视频脚本.xlsx
DriverSample/: LimitDriver.py  ServoDriver.py
HelloPicoWithQt/: .gitignore  HelloAutoDeploy.py  main.py  main.qml  pyproject.toml  requirements.txt
HelloPicoWithQt/Components/: HelloFilledButton.qml  HelloMainContainer.qml  HelloPositionContainer.qml  HelloSerialConst.qml  HelloSlider.qml  HelloSliderForPositionContainer.qml  HelloSpeedContainer.qml  qmldir
HelloPicoWithQt/Components/FluentUI/: FluButton.qml  FluContentDialog.qml  FluControlBackground.qml  FluFilledButton.qml  FluFocusRectangle.qml  FluIcon.qml  FluIconButton.qml  FluInfoBar.qml  FluObject.qml  FluPopup.qml  FluScrollBar.qml  FluShadow.qml  FluSlider.qml  FluText.qml  FluTooltip.qml
HelloPicoWithQt/Scripts/: Ch343Serial.py  HelloSerialPort.py  HelloSerialPortConst.py  HelloSpeedScripts.py
Test/: HelloADC.py  HelloEncoder.py  HelloServo.py  HelloUART.py
Test/HelloPicoWithQtDesignTest/: CMakeLists.txt  HelloPicoWithQtDesignTest.qmlproject  HelloPicoWithQtDesignTest.qmlproject.qtds  qds.cmake
Test/HelloPicoWithQtDesignTest/App/autogen/: environment.h
Test/HelloPicoWithQtDesignTest/HelloPicoWithQtDesignTest/: CMakeLists.txt  Constants.qml  qmldir
Test/HelloPicoWithQtDesignTest/HelloPicoWithQtDesignTestContent/: App.qml  CMakeLists.txt  Screen01.ui.qml
Test/HelloPicoWithQtLogicalTest/: FindSerialPort.py  SerialPortClassTest.py
(+1 files in other folders)
